feat(FSB-001): Se agregan funcionalidades de beans y configuracion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8081
+server.servlet.context-path=/app
+
+value.name = Jaidenver
+value.apellido = Hurtado
+value.random = ${random.value}
+
+value.name2 = Jhadi
+value.apellido2 = Hurtado
+value.random2 ${random.value}
+
+
+
+user.email = test@email.com
+user.password = 123
+user.age = 25
+
+
+
+
 
