--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.level.com.fundamentosplatzi.springboot.fundamentos.bean.MyBeanWithDependencyImplement=debug
+logging.level.com.fundamentosplatzi.springboot.fundamentos.bean.MyBeanWithPropertiesImplement2=debug
 server.port=8081
 server.servlet.context-path=/app
 
@@ -15,6 +17,17 @@ value.random2 ${random.value}
 user.email = test@email.com
 user.password = 123
 user.age = 25
+
+loggin.level.root=debug
+loggin.level.org.springframework.web=info
+loggin.level.org.hibernate=error
+spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:h2:men:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database.platform=org.hibernate.dialect.h2Dialect
 
 
 
