Estoy trabajando con el agrego de un API rest y una que otras dependencias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,11 +23,16 @@ loggin.level.org.springframework.web=info
 loggin.level.org.hibernate=error
 spring.jpa.show-sql=true
 
+log4j.rootLogger=INFO, stdout
+
+
+
 #spring.datasource.url=jdbc:h2:men:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.jpa.database.platform=org.hibernate.dialect.h2Dialect
+
 
 
 
